--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,7 +15,7 @@
 #   branch = "dev"
 #   source = "github.com/myfork/project2"
 #
-# [[override]]
+# [[constraint]]
 #   name = "github.com/x/y"
 #   version = "2.4.0"
 #
